objects/Event_Session__c/Event_Session__c.object-meta.xml
<CustomObject>
    <description>Track session details for an event. Created as a POC for the Tanium Community.</description>
    <label>Event Session</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>