objects/Event_Session__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Start date and time of the event</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>