objects/Event_Session__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Length of time that the session will run (e.g. 30 mins)</description>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>