objects/Event_Session__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Lookup to the event.</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipName>Event_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>