objects/Event_Session__c/fields/Speakers__c.field-meta.xml
<CustomField>
    <fullName>Speakers__c</fullName>
    <label>Speakers</label>
    <type>TextArea</type>
</CustomField>